--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": false,
   "homepage": "https://reduction-admin.github.io/react-reduction",
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "4.1.1",
     "chart.js": "^2.7.2",
     "classnames": "^2.2.6",
@@ -11,6 +12,7 @@
     "faker": "^4.1.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
+    "react-animated-slider": "^1.1.4",
     "react-chartjs-2": "^2.7.2",
     "react-component-queries": "^2.3.0",
     "react-d3-map": "^0.8.3",
@@ -19,17 +21,22 @@
     "react-icons": "^2.2.7",
     "react-infinite-calendar": "^2.3.1",
     "react-notification-system": "^0.2.17",
+    "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-select": "^2.3.0",
     "react-simple-maps": "^0.12.1",
     "react-sizeme": "^2.5.2",
     "react-transition-group": "^2.3.1",
     "reactstrap": "^6.1.0",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7",
+    "redux-thunk": "^2.3.0",
     "victory": "^0.27.1"
   },
   "devDependencies": {
     "gh-pages": "^1.2.0",
-    "node-sass-chokidar": "^1.3.0",
+    "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.3",
     "react-scripts": "1.1.4",
     "serve": "^9.1.0",
