--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "classnames": "^2.2.6",
     "d3-geo": "^1.10.0",
     "faker": "^4.1.0",
+    "history": "^4.7.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-animated-slider": "^1.1.4",
@@ -24,6 +25,7 @@
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
     "react-select": "^2.3.0",
     "react-simple-maps": "^0.12.1",
     "react-sizeme": "^2.5.2",
@@ -31,7 +33,9 @@
     "reactstrap": "^6.1.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
+    "redux-localstorage": "^0.4.1",
     "redux-thunk": "^2.3.0",
+    "validator": "^10.11.0",
     "victory": "^0.27.1"
   },
   "devDependencies": {
